2010-05-20  Rudy Neeser  <rudy.neeser@gmail.com>

	* l-math.asd (:l-math): Version bump.

	* vector.lisp (x,y,z,w): Ensure that the setf-expanders for these
	forms coerce the new value to a double.

	* matrix.lisp (matrix-elt): Ensured that new elements are coerced
	to double in the setf-expander.

	* vector.lisp (elt): Coerces the new value to a double in the
	setf-expander.
	(initialise-data): Ensure that the vector's elements are
	initialised and set to double.
	(make-vector): Ensure the the initial-elements are coerced to a
	double.

	* matrix.lisp (initialise-data): Ensure that the matrix elements
	are initialised, and that the matrix is an appropriate type.

	* generics.lisp (equivalent): Added an IGNORE statement to fix a
	warning in CLISP

2010-05-11  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (to-homogenous): Added an implementation to
	transform vectors represented as lists into homogenous
	coordinates.
	(to-homogenous): ditto for VECTOR objects

	* generics.lisp (to-homogenous): Added a method for lifting
	something into homogenous space.

	* vector.lisp (to-list): Added an implementation that will
	transform vectors into lists.

	* generics.lisp: Created a generic method that will transform
	objects into lists.

	* translation.lisp: Added a file for managing translation
	matrices.

	* scale.lisp (create-scale-matrix): Created a method to create
	non-uniform scales.
	(create-uniform-scale-matrix): Returns a matrix that performs
	uniform scaling.

	* matrix.lisp (make-diagonal): A function that returns diagonal
	matrices.

	* scale.lisp: Added a new file to manage scale matrices.

2010-04-13  Rudy Neeser  <rudy.neeser@gmail.com>

	* operations.lisp (create-vector-operation-method): Updated so
	that vector operations are performed using loops. 

2010-04-12  Rudy Neeser  <rudy.neeser@gmail.com>

	* matrix.lisp (zerop): Returns T iff all members of the matrix are
	EQUIVALENT to zero.

	* vector.lisp (vector=): Performed some optimisations to make